refactor: remove gateway jwks dependency
